Managing CI Integration Issues

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,5 @@ jobs:
 
       - name: Run Secret Scan (Gitleaks)
         uses: zricethezav/gitleaks-action@v2.3.3
+        with:
+            exit-code: 1
