--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "keywords": [
     "visionindex",
     "facial recognition",
