--- a/app/package.json
+++ b/app/package.json
@@ -50,6 +50,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
+    "node-cron": "^4.2.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
