--- a/app/package.json
+++ b/app/package.json
@@ -51,6 +51,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.5",
     "winston": "^3.17.0"
   },
   "devDependencies": {
