--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,9 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-
 jobs:
   lint-secrets-tests:
     runs-on: ubuntu-latest
-
     services:
       mongo:
         image: mongo:6
@@ -43,7 +41,7 @@ jobs:
           curl -sL https://github.com/zricethezav/gitleaks/releases/download/v8.16.1/gitleaks_8.16.1_linux_x64.tar.gz | tar xz
           ./gitleaks detect --redact --exit-code=1
 
-      - name: Run Tests
+      - name: Run Tests (Local Mongo)
         env:
           MONGO_URI: mongodb://localhost:27017/ci_testdb
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
@@ -51,3 +49,9 @@ jobs:
           NODE_ENV: test
         run: npm test
         working-directory: ./app
+
+      - name: Terminate leftover processes
+        if: always()
+        run: |
+          # Use killall to terminate any Node.js processes that might be running
+          killall node || true
