--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "lint": "eslint . --ext .js",
-    "test": "mocha \"tests/**/*.js\" --timeout 10000"
+    "test": "mocha \"tests/**/*.js\" --timeout 10000 --exit"
   },
   "keywords": [
     "visionindex",
