--- a/app/.env.example
+++ b/app/.env.example
@@ -1,4 +1,13 @@
+# Port Number
 PORT=your_port_here
-DB_URI=your_db_uri_here
+
+# JWT Secrets
 JWT_SECRET=your_jwt_secret_here
 JWT_REFRESH_SECRET=your_jwt_refresh_secret_here
+
+# PostgreSQL DB 
+DB_USER=your_db_username
+DB_PASSWORD=your_db_password
+DB_HOST=your_db_host
+DB_NAME=your_db_name
+DB_PORT=your_db_port
