--- a/app/package.json
+++ b/app/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "chai-http": "^5.1.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
