--- a/app/package.json
+++ b/app/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.899.0",
     "@aws-sdk/s3-request-presigner": "^3.899.0",
+    "@temporalio/client": "^1.10.0",
     "bcrypt": "^6.0.0",
     "chai-http": "^5.1.2",
     "cookie-parser": "^1.4.7",
