connected pipeline to frontend

--- a/app/package.json
+++ b/app/package.json
@@ -44,16 +44,20 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.899.0",
     "@aws-sdk/s3-request-presigner": "^3.899.0",
+    "@qdrant/js-client-rest": "^1.16.2",
     "@temporalio/client": "^1.10.0",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "chai-http": "^5.1.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "form-data": "^4.0.5",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
